# python-bindings-prototype

./: .gitignore  README.md  advanced.g  build_moose_bridge.sh  final_API.py  fix_check.py  flow_moose_pipeline.mmd  flow_moose_pipeline_horizontal.mmd  flow_moose_pipeline_new.mmd  geom.h  mermaid_flow.mmd  myview.sh  myview.v  myview2.v  myview_v2.sh  output_fixed.ppm  pyproject.toml  render_view.v  setup.py  test_advanced.py  test_advanced_stage8.g  test_attributes.g  test_combinations_stage6.g  test_geometry_stage4.g  test_geometry_stage4b.g  test_high_level_api.py  test_mat.g  test_mat_v2.g  test_recreate.g  test_stage10.g  test_stage10.ppm  test_stage10_render.g  test_stage12.py  test_stage9_full.g  test_transform_stage7.g  verify_stage10.py  verify_stage11.py  verify_stage12.py  verify_stage13.py  verify_stage14.py  (+3 more)
examples/: create_sphere.py  moose_bridge_demo.py  moose_compare_paths.py  moose_next_primitives_test.py  test_moose_rt3_smoke.py
src/_brlcad/: advanced_primitive_bindings.c  attribute_bindings.c  capsule_helpers.c  capsule_helpers.h  comb_bindings.c  db_bindings.c  module.c  transform_bindings.c
src/adapter/: adapter.h  advanced_primitive_adapter.c  attribute_adapter.c  comb_adapter.c  db_adapter.c  primitive_adapter.c  transform_adapter.c
src/brlcad/: __init__.py  advanced_primitives.py  backend.py  combination.py  database.py  exporter.py  high_level_api.py  moose.py  moose_rt3_backend.py
src/brlcad/primitives/: __init__.py  primitive.py  (+2 more)
src/moose_bridge/: CMakeLists.txt  moose_c_api.cpp  moose_c_api.h
src/pybrlcad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_attributes.py  test_capsule.py  test_capsule_run.py  test_combinations.py  test_create_sphere_real.py  test_database.py  test_database_open.py  test_read_sphere.py  test_transformations.py
